<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tripmania</string>
    <string name="app_id">240245536099571</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="SavedLocations">Saved Locations</string>
    <string name="changeLanguage">Change Language</string>
    <string name="Current_Location">Current Location</string>
    <string name="Search_Location">Search Location</string>
    <string name="About">About</string>
    <string name="title_activity_major__menu__options">Lahore</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_list_view_info">Restaurants</string>
    <string name="title_activity_show_complete_info">Salt n Pepper</string>
    <string name="title_activity_about">About Us</string>
    <string name="title_activity_main_activity1">Tripmania</string>
    <string name="title_activity_single_place">SinglePlaceActivity</string>
    <string name="title_activity_singe_place">SingePlaceActivity</string>
    <string name="title_activity_places_map">PlacesMapActivity</string>
    <string name="title_activity_data_fetcher">DataFetcher</string>
    <string name="App_About_Info">Tripmania is a project for enthusiastic explorers. It provides explorers with all the relevant information about specific places in the world to enable them to enjoy their experiences to the full extent. It includes every single detail regarding the place, no matter how small or big it is. It will give information about the Food, People and Culture.</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="publish_feed">Publish feed</string>
    <string name="publish_story">Publish story</string>
    <string name="invite_all">Invite all</string>
    <string name="invite_one">Invite one</string>
    <string name="invite_suggested">Invite suggested</string>
    <string name="get_my_profile">Get my profile</string>
    <string name="get_my_profile_with_properties">Get my profile (Properties)</string>
    <string name="get_friends">Get friends</string>
    <string name="get_friends_with_properties">Get friends (Properties)</string>
    <string name="fb_feed_caption">Know who are your best friends</string>
    <string name="fb_feed_description">With Besties, the exciting new social game, you will be able to find out how truly do you know your friends</string>
    <string name="fb_feed_link">https://play.google.com/store/apps/details?id=com.besties</string>
    <string name="fb_feed_name">Besties</string>
    <string name="fb_feed_message">Who dare to be my opponent? :)</string>
    <string name="fb_feed_image">http://romkuapps.com/Apps/Socialist/blue_version_2.png</string>
    <string name="fragment_example_">Fragment example >></string>
    <string name="publish_photo">Publish photo</string>
    <string name="get_albums">Get albums</string>
    <string name="title_activity_datagetter">Datagetter</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_create_file">CreateFileActivity</string>
    <string name="title_activity_create_file_activity2">create</string>
    <string name="title_activity_drive">DriveActivity</string>
    <string name="title_activity_result">ResultActivity</string>

</resources>
